--- a/css/sass/_chapter4.sass
+++ b/css/sass/_chapter4.sass
@@ -52,6 +52,26 @@
             font-size: 36px
             margin-bottom: .5em
 
+  .pie_slice
+    @include transform-origin(50px, 50px)
+    @include transform(rotate(-90deg))
+    @include transition(transform 2s)
+
+    // leave image for polyfilling if necessary
+    img
+      display: none
+
+  .active
+    .percent_68 .pie_slice
+      @include transform(rotate(65deg))
+
+    .percent_59 .pie_slice
+      @include transform(rotate(32deg))
+
+    .percent_57 .pie_slice
+      @include transform(rotate(30deg))
+
+
   .nancy_goldberg
     @extend .right
 
@@ -78,7 +98,7 @@
   .they_want_to
     @extend .bordered
     margin-top: 3em
-    
+
     p
       @extend .major
 
