--- a/css/sass/_chapter4.sass
+++ b/css/sass/_chapter4.sass
@@ -89,9 +89,133 @@
     .contents
       background-position: left 130px !important
 
+  .reasons_for_working
+    margin: 4em 0 
+
+    .reasons_for_working-chart
+      background: image-url('4/reasons_for_working-chart.gif') left top no-repeat
+      margin: 0 0 0 -37px
+      width: 837px
+      height: 365px
+      position: relative
+
+      .data_point.bar
+        display: block
+        position: absolute
+        bottom: 65px
+        width: 20px
+        height: 0
+        overflow: hidden
+        @include transition(all .3s)
+
+        &.old
+          background: rgba(0, 0, 0, .8)
+
+        &.young
+          background: rgba($green, .8)
+
+        $reasons_for_working-bar_spacer: 120px
+
+        &#reasons_for_working-chart-data_point-1
+          left: 70px
+          @include transition-delay(.1s)
+
+          &.active
+            height: 205px            
+
+        &#reasons_for_working-chart-data_point-2
+          left: 100px
+          @include transition-delay(1s)
+
+          &.active
+            height: 205px
+
+        &#reasons_for_working-chart-data_point-3
+          left: 70px + $reasons_for_working-bar_spacer
+          @include transition-delay(.2s)
+
+          &.active
+            height: 185px
+
+        &#reasons_for_working-chart-data_point-4
+          left: 100px + $reasons_for_working-bar_spacer
+          @include transition-delay(1.1s)
+
+          &.active
+            height: 250px
+
+        &#reasons_for_working-chart-data_point-5
+          left: 70px + ($reasons_for_working-bar_spacer * 2) - 5px
+          @include transition-delay(.3s)
+
+          &.active
+            height: 182px
+
+        &#reasons_for_working-chart-data_point-6
+          left: 100px + ($reasons_for_working-bar_spacer * 2) - 5px
+          @include transition-delay(1.2s)
+
+          &.active
+            height: 129px
+
+        &#reasons_for_working-chart-data_point-7
+          left: 70px + ($reasons_for_working-bar_spacer * 3) - 20px
+          @include transition-delay(.4s)
+
+          &.active
+            height: 182px
+
+        &#reasons_for_working-chart-data_point-8
+          left: 100px + ($reasons_for_working-bar_spacer * 3) - 20px
+          @include transition-delay(1.3s)
+
+          &.active
+            height: 114px
+
+        &#reasons_for_working-chart-data_point-9
+          left: 70px + ($reasons_for_working-bar_spacer * 4) - 25px
+          @include transition-delay(.5s)
+
+          &.active
+            height: 182px
+
+        &#reasons_for_working-chart-data_point-10
+          left: 100px + ($reasons_for_working-bar_spacer * 4) - 25px
+          @include transition-delay(1.4s)
+
+          &.active
+            height: 114px
+
+        &#reasons_for_working-chart-data_point-11
+          left: 70px + ($reasons_for_working-bar_spacer * 5) - 22px
+          @include transition-delay(.6s)
+
+          &.active
+            height: 114px
+
+        &#reasons_for_working-chart-data_point-12
+          left: 100px + ($reasons_for_working-bar_spacer * 5) - 22px
+          @include transition-delay(1.5s)
+
+          &.active
+            height: 224px
+
+        &#reasons_for_working-chart-data_point-13
+          left: 70px + ($reasons_for_working-bar_spacer * 6) - 30px
+          @include transition-delay(.7s)
+
+          &.active
+            height: 75px
+
+        &#reasons_for_working-chart-data_point-14
+          left: 100px + ($reasons_for_working-bar_spacer * 6) - 30px
+          @include transition-delay(1.6s)
+
+          &.active
+            height: 192px
+            
   .boom_in_entrepreneurship
     @extend .left
-    @extend .blend-top
 
     h2
       margin-top: 0 !important
