--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ em {
   padding: 48px 0; }
 
 /* line 72, sass/_base.sass */
-.blend-top .contents, .chapter-3-working-for-the-nest-egg article .investor_underperforms .contents, .chapter-4-working-in-retirement article .boom_in_entrepreneurship .contents {
+.blend-top .contents, .chapter-3-working-for-the-nest-egg article .investor_underperforms .contents {
   padding-top: 0; }
 
 /* line 75, sass/_base.sass */
@@ -1474,9 +1474,7 @@ footer {
   /* line 122, sass/_chapter3.sass */
   .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar {
     background: rgba(0, 0, 0, 0.8);
-    color: white;
     display: block;
-    text-align: center;
     position: absolute;
     bottom: 108px;
     width: 40px;
@@ -1486,77 +1484,77 @@ footer {
     -moz-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s; }
-    /* line 134, sass/_chapter3.sass */
+    /* line 132, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-1 {
       left: 97px;
       -webkit-transition-delay: 0.2s;
       -moz-transition-delay: 0.2s;
       -o-transition-delay: 0.2s;
       transition-delay: 0.2s; }
-      /* line 138, sass/_chapter3.sass */
+      /* line 136, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-1.active {
         height: 242px; }
-    /* line 141, sass/_chapter3.sass */
+    /* line 139, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-2 {
       left: 195px;
       -webkit-transition-delay: 0.3s;
       -moz-transition-delay: 0.3s;
       -o-transition-delay: 0.3s;
       transition-delay: 0.3s; }
-      /* line 145, sass/_chapter3.sass */
+      /* line 143, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-2.active {
         height: 217px; }
-    /* line 148, sass/_chapter3.sass */
+    /* line 146, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-3 {
       left: 295px;
       -webkit-transition-delay: 0.4s;
       -moz-transition-delay: 0.4s;
       -o-transition-delay: 0.4s;
       transition-delay: 0.4s; }
-      /* line 152, sass/_chapter3.sass */
+      /* line 150, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-3.active {
         height: 217px; }
-    /* line 155, sass/_chapter3.sass */
+    /* line 153, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-4 {
       left: 394px;
       -webkit-transition-delay: 0.5s;
       -moz-transition-delay: 0.5s;
       -o-transition-delay: 0.5s;
       transition-delay: 0.5s; }
-      /* line 159, sass/_chapter3.sass */
+      /* line 157, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-4.active {
         height: 178px; }
-    /* line 162, sass/_chapter3.sass */
+    /* line 160, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-5 {
       left: 493px;
       -webkit-transition-delay: 0.6s;
       -moz-transition-delay: 0.6s;
       -o-transition-delay: 0.6s;
       transition-delay: 0.6s; }
-      /* line 166, sass/_chapter3.sass */
+      /* line 164, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-5.active {
         height: 128px; }
-    /* line 169, sass/_chapter3.sass */
+    /* line 167, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-6 {
       left: 590px;
       -webkit-transition-delay: 0.7s;
       -moz-transition-delay: 0.7s;
       -o-transition-delay: 0.7s;
       transition-delay: 0.7s; }
-      /* line 173, sass/_chapter3.sass */
+      /* line 171, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-6.active {
         height: 88px; }
-    /* line 176, sass/_chapter3.sass */
+    /* line 174, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-7 {
       left: 690px;
       -webkit-transition-delay: 0.8s;
       -moz-transition-delay: 0.8s;
       -o-transition-delay: 0.8s;
       transition-delay: 0.8s; }
-      /* line 180, sass/_chapter3.sass */
+      /* line 178, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-7.active {
         height: 62px; }
-    /* line 183, sass/_chapter3.sass */
+    /* line 181, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-8 {
       background: #548e85;
       left: 788px;
@@ -1564,10 +1562,10 @@ footer {
       -moz-transition-delay: 0.9s;
       -o-transition-delay: 0.9s;
       transition-delay: 0.9s; }
-      /* line 188, sass/_chapter3.sass */
+      /* line 186, sass/_chapter3.sass */
       .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart .data_point.bar#investor_underperforms-chart-data_point-8.active {
         height: 52px; }
-  /* line 191, sass/_chapter3.sass */
+  /* line 189, sass/_chapter3.sass */
   .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart #investor_underperforms-chart-data_point-9 {
     background: rgba(0, 0, 0, 0.8);
     border-radius: 2px;
@@ -1599,29 +1597,29 @@ footer {
       border-right: 4px solid transparent;
       border-top: 4px solid rgba(0, 0, 0, 0.8);
       margin-bottom: -4px; }
-    /* line 210, sass/_chapter3.sass */
+    /* line 208, sass/_chapter3.sass */
     .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart #investor_underperforms-chart-data_point-9.active {
       margin-top: 0;
       opacity: 1; }
-/* line 226, sass/_chapter3.sass */
+/* line 224, sass/_chapter3.sass */
 .chapter-3-working-for-the-nest-egg article .the_great_recession .contents {
   background-position: left 65% !important;
   padding: 2em 0; }
-  /* line 230, sass/_chapter3.sass */
+  /* line 228, sass/_chapter3.sass */
   .chapter-3-working-for-the-nest-egg article .the_great_recession .contents p.intro {
     width: 100%; }
-/* line 236, sass/_chapter3.sass */
+/* line 234, sass/_chapter3.sass */
 .chapter-3-working-for-the-nest-egg article .mike_kemp h2 {
   margin-top: 0 !important;
   padding-top: 0; }
-/* line 243, sass/_chapter3.sass */
+/* line 241, sass/_chapter3.sass */
 .chapter-3-working-for-the-nest-egg article .unemployed_but_wanting_to_work h2 {
   font-size: 42px; }
-/* line 249, sass/_chapter3.sass */
+/* line 247, sass/_chapter3.sass */
 .chapter-3-working-for-the-nest-egg article .brutal_job_search h2 {
   margin-top: -0.25em !important;
   padding-top: 0; }
-/* line 260, sass/_chapter3.sass */
+/* line 258, sass/_chapter3.sass */
 .chapter-3-working-for-the-nest-egg article .paul_transition {
   margin-top: 5em; }
 
@@ -1691,13 +1689,181 @@ footer {
 /* line 89, sass/_chapter4.sass */
 .chapter-4-working-in-retirement article .marc_freedman .contents {
   background-position: left 130px !important; }
-/* line 96, sass/_chapter4.sass */
+/* line 92, sass/_chapter4.sass */
+.chapter-4-working-in-retirement article .reasons_for_working {
+  margin: 4em 0; }
+  /* line 95, sass/_chapter4.sass */
+  .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart {
+    background: url('../img/4/reasons_for_working-chart.gif?1369915955') left top no-repeat;
+    margin: 0 0 0 -37px;
+    width: 837px;
+    height: 365px;
+    position: relative; }
+    /* line 102, sass/_chapter4.sass */
+    .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar {
+      display: block;
+      position: absolute;
+      bottom: 65px;
+      width: 20px;
+      height: 0;
+      overflow: hidden;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      -o-transition: all 0.3s;
+      transition: all 0.3s; }
+      /* line 111, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar.old {
+        background: rgba(0, 0, 0, 0.8); }
+      /* line 114, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar.young {
+        background: rgba(84, 142, 133, 0.8); }
+      /* line 119, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-1 {
+        left: 70px;
+        -webkit-transition-delay: 0.1s;
+        -moz-transition-delay: 0.1s;
+        -o-transition-delay: 0.1s;
+        transition-delay: 0.1s; }
+        /* line 123, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-1.active {
+          height: 205px; }
+      /* line 126, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-2 {
+        left: 100px;
+        -webkit-transition-delay: 1s;
+        -moz-transition-delay: 1s;
+        -o-transition-delay: 1s;
+        transition-delay: 1s; }
+        /* line 130, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-2.active {
+          height: 205px; }
+      /* line 133, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-3 {
+        left: 190px;
+        -webkit-transition-delay: 0.2s;
+        -moz-transition-delay: 0.2s;
+        -o-transition-delay: 0.2s;
+        transition-delay: 0.2s; }
+        /* line 137, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-3.active {
+          height: 185px; }
+      /* line 140, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-4 {
+        left: 220px;
+        -webkit-transition-delay: 1.1s;
+        -moz-transition-delay: 1.1s;
+        -o-transition-delay: 1.1s;
+        transition-delay: 1.1s; }
+        /* line 144, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-4.active {
+          height: 250px; }
+      /* line 147, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-5 {
+        left: 305px;
+        -webkit-transition-delay: 0.3s;
+        -moz-transition-delay: 0.3s;
+        -o-transition-delay: 0.3s;
+        transition-delay: 0.3s; }
+        /* line 151, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-5.active {
+          height: 182px; }
+      /* line 154, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-6 {
+        left: 335px;
+        -webkit-transition-delay: 1.2s;
+        -moz-transition-delay: 1.2s;
+        -o-transition-delay: 1.2s;
+        transition-delay: 1.2s; }
+        /* line 158, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-6.active {
+          height: 129px; }
+      /* line 161, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-7 {
+        left: 410px;
+        -webkit-transition-delay: 0.4s;
+        -moz-transition-delay: 0.4s;
+        -o-transition-delay: 0.4s;
+        transition-delay: 0.4s; }
+        /* line 165, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-7.active {
+          height: 182px; }
+      /* line 168, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-8 {
+        left: 440px;
+        -webkit-transition-delay: 1.3s;
+        -moz-transition-delay: 1.3s;
+        -o-transition-delay: 1.3s;
+        transition-delay: 1.3s; }
+        /* line 172, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-8.active {
+          height: 114px; }
+      /* line 175, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-9 {
+        left: 525px;
+        -webkit-transition-delay: 0.5s;
+        -moz-transition-delay: 0.5s;
+        -o-transition-delay: 0.5s;
+        transition-delay: 0.5s; }
+        /* line 179, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-9.active {
+          height: 182px; }
+      /* line 182, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-10 {
+        left: 555px;
+        -webkit-transition-delay: 1.4s;
+        -moz-transition-delay: 1.4s;
+        -o-transition-delay: 1.4s;
+        transition-delay: 1.4s; }
+        /* line 186, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-10.active {
+          height: 114px; }
+      /* line 189, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-11 {
+        left: 648px;
+        -webkit-transition-delay: 0.6s;
+        -moz-transition-delay: 0.6s;
+        -o-transition-delay: 0.6s;
+        transition-delay: 0.6s; }
+        /* line 193, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-11.active {
+          height: 114px; }
+      /* line 196, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-12 {
+        left: 678px;
+        -webkit-transition-delay: 1.5s;
+        -moz-transition-delay: 1.5s;
+        -o-transition-delay: 1.5s;
+        transition-delay: 1.5s; }
+        /* line 200, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-12.active {
+          height: 224px; }
+      /* line 203, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-13 {
+        left: 760px;
+        -webkit-transition-delay: 0.7s;
+        -moz-transition-delay: 0.7s;
+        -o-transition-delay: 0.7s;
+        transition-delay: 0.7s; }
+        /* line 207, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-13.active {
+          height: 75px; }
+      /* line 210, sass/_chapter4.sass */
+      .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-14 {
+        left: 790px;
+        -webkit-transition-delay: 1.6s;
+        -moz-transition-delay: 1.6s;
+        -o-transition-delay: 1.6s;
+        transition-delay: 1.6s; }
+        /* line 214, sass/_chapter4.sass */
+        .chapter-4-working-in-retirement article .reasons_for_working .reasons_for_working-chart .data_point.bar#reasons_for_working-chart-data_point-14.active {
+          height: 192px; }
+/* line 220, sass/_chapter4.sass */
 .chapter-4-working-in-retirement article .boom_in_entrepreneurship h2 {
   margin-top: 0 !important; }
-/* line 102, sass/_chapter4.sass */
+/* line 226, sass/_chapter4.sass */
 .chapter-4-working-in-retirement article .vita_needle h2 {
   margin-top: -0.25em !important;
   padding-top: 0; }
-/* line 106, sass/_chapter4.sass */
+/* line 230, sass/_chapter4.sass */
 .chapter-4-working-in-retirement article .couldnt_be_happier {
   margin-top: 3em; }
