--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -1,3 +1,10 @@
 .chapter-5-moving-forward article
 
-  //
+  .chapter_title
+    padding: 24em 0 10em
+
+    .background_image
+      background-image: image-url('5/man_standing-medium.jpg')
+
+    .contents
+      max-width: 900px
