--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -1,7 +1,6 @@
 header.site_header,
 header.story_header
   @extend .fixed
-  // @include translateZ(0)
   padding: 0
   text-transform: uppercase
   width: 100%
@@ -141,8 +140,10 @@ header.story_header
     display: none
 
   h1
+    @include text-shadow($dark 0 0 25px)
+    color: #fff
     font-size: $font-size*3.6
-    margin: -.25em 0 $line/4
+    margin: 4em 0 $line/4
     word-spacing: -$line/2
 
     em
@@ -153,7 +154,6 @@ header.story_header
       padding: 0 $line/8
 
     small
-      color: $green
       font-family: 'Adobe Caslon W01 Bd It', serif
       font-size: $font-size*2.3
       font-style: normal
@@ -182,8 +182,3 @@ header.story_header
 
       em
         background: #fff
-
-  &.on_dark_background
-    h1,
-    h1 small
-      color: #fff
