--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -335,7 +335,8 @@ section
   padding: .5em 0 .4em 0
   width: $desktop
 
-.form_question
+.form_question,
+.conclusion_section
   background: $green
   color: #fff
   font-family: $proxima-bold
