Ch5: 'Ask Larry' question link added. (Fixes #38)

--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -68,22 +68,21 @@
       &:hover
         color: $dark
 
-  .ask_details,
-  .three_steps
-    a
-      background: $green
-      color: #fff
-      display: inline-block
-      font-family: $proxima-bold
-      font-size: 18px
-      margin: .5em 0
-      padding: 0.5em 1em 0.4em 1em
-      text-decoration: none
-      @include triangle-right(20px, $green)
+  .ask_details a.big,
+  .three_steps a
+    background: $green
+    color: #fff
+    display: inline-block
+    font-family: $proxima-bold
+    font-size: 18px
+    margin: .5em 0
+    padding: 0.5em 1em 0.4em 1em
+    text-decoration: none
+    @include triangle-right(20px, $green)
 
-      &:hover
-        background: $dark
-        @include triangle-right(20px, $dark)
+    &:hover
+      background: $dark
+      @include triangle-right(20px, $dark)
 
   .ask_details
     padding: 0 1.5em
