Added first batch of videos.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -285,7 +285,7 @@ section
           margin: .75em 0
 
     video
-      background: #000
+      // background: #000
       width: 500px
       height: 280px
 
