--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -83,7 +83,11 @@
         float: left
 
       &.quotation
-        width: 48%
+        background: transparent
+        width: 100%
+
+        .contents
+          min-height: 300px
 
         blockquote
           width: 330px
