--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block; }
 
 /* line 3, sass/_mixins.sass */
-header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after, .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point:after, .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-5:after, .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart #investor_underperforms-chart-data_point-9:after {
+header.site_header nav li:hover:after, header.site_header nav li.current_chapter:after, .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point:after, .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-5:after, .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-9:after, .chapter-3-working-for-the-nest-egg article .investor_underperforms .investor_underperforms-chart #investor_underperforms-chart-data_point-9:after {
   content: "";
   position: absolute;
   left: 50%; }
@@ -141,7 +141,7 @@ em {
   padding: 48px 0; }
 
 /* line 72, sass/_base.sass */
-.blend-top .contents, .chapter-3-working-for-the-nest-egg article .investor_underperforms .contents {
+.blend-top .contents, .chapter-1-rethinking-retirement article .labor_force .contents, .chapter-3-working-for-the-nest-egg article .investor_underperforms .contents {
   padding-top: 0; }
 
 /* line 75, sass/_base.sass */
@@ -965,32 +965,32 @@ footer {
   width: 100px;
   height: 100px;
   margin: 0 auto; }
-  /* line 54, sass/_chapter1.sass */
+  /* line 53, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .percent_50 img,
   .chapter-1-rethinking-retirement article .percent_92 img {
     display: none; }
-/* line 58, sass/_chapter1.sass */
+/* line 57, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .active .percent_92 .pie_slice {
   -webkit-transform: rotate(-20deg);
   -moz-transform: rotate(-20deg);
   -ms-transform: rotate(-20deg);
   -o-transform: rotate(-20deg);
   transform: rotate(-20deg); }
-/* line 61, sass/_chapter1.sass */
+/* line 60, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .active .percent_50 .pie_slice {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg); }
-/* line 64, sass/_chapter1.sass */
+/* line 63, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .percentage_of_workers-chart {
   background: url('../img/1/percentage_of_workers-chart.gif?1369900647') left top no-repeat;
   margin: 5em 0 2em -40px;
   width: 860px;
   height: 280px;
   position: relative; }
-  /* line 71, sass/_chapter1.sass */
+  /* line 70, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point {
     background: rgba(0, 0, 0, 0.8);
     border-radius: 2px;
@@ -1013,16 +1013,16 @@ footer {
       border-right: 4px solid transparent;
       border-top: 4px solid rgba(0, 0, 0, 0.8);
       margin-bottom: -4px; }
-    /* line 84, sass/_chapter1.sass */
+    /* line 83, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point strong {
       display: block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 24px; }
-    /* line 89, sass/_chapter1.sass */
+    /* line 88, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point.active {
       margin-top: 0;
       opacity: 1; }
-    /* line 93, sass/_chapter1.sass */
+    /* line 92, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-1 {
       left: 157px;
       top: 80px;
@@ -1030,7 +1030,7 @@ footer {
       -moz-transition-delay: 0.2s;
       -o-transition-delay: 0.2s;
       transition-delay: 0.2s; }
-    /* line 98, sass/_chapter1.sass */
+    /* line 97, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-2 {
       left: 319px;
       top: 46px;
@@ -1038,7 +1038,7 @@ footer {
       -moz-transition-delay: 0.4s;
       -o-transition-delay: 0.4s;
       transition-delay: 0.4s; }
-    /* line 103, sass/_chapter1.sass */
+    /* line 102, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-3 {
       left: 475px;
       top: 38px;
@@ -1046,7 +1046,7 @@ footer {
       -moz-transition-delay: 0.6s;
       -o-transition-delay: 0.6s;
       transition-delay: 0.6s; }
-    /* line 108, sass/_chapter1.sass */
+    /* line 107, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-4 {
       left: 642px;
       top: 2px;
@@ -1054,7 +1054,7 @@ footer {
       -moz-transition-delay: 0.8s;
       -o-transition-delay: 0.8s;
       transition-delay: 0.8s; }
-    /* line 113, sass/_chapter1.sass */
+    /* line 112, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .percentage_of_workers-chart .data_point#percentage_of_workers-chart-data_point-5 {
       background: #548e85;
       left: 804px;
@@ -1071,10 +1071,10 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
-/* line 123, sass/_chapter1.sass */
+/* line 122, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers .background_image {
   background-image: url('../img/1/grump-large.jpg?1369780716'); }
-/* line 126, sass/_chapter1.sass */
+/* line 125, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers p {
   clear: left;
   background: white;
@@ -1093,23 +1093,23 @@ footer {
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-  /* line 129, sass/_chapter1.sass */
+  /* line 128, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p span {
     display: block;
     line-height: 1;
     margin: 0.25em 0 0.5em;
     padding: 0.75em 0 0.75em;
     width: 100%; }
-    /* line 137, sass/_chapter1.sass */
+    /* line 136, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
       display: inline-block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 60px;
       margin: 0 0.1em; }
-/* line 146, sass/_chapter1.sass */
+/* line 145, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .background_image {
   background-image: url('../img/1/diner.jpg?1369444335'); }
-/* line 149, sass/_chapter1.sass */
+/* line 148, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
   clear: left;
   background: white;
@@ -1128,10 +1128,10 @@ footer {
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-/* line 158, sass/_chapter1.sass */
+/* line 157, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households .background_image {
   background-image: url('../img/1/jars-large.jpg?1369781132'); }
-/* line 161, sass/_chapter1.sass */
+/* line 160, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households p {
   clear: left;
   background: white;
@@ -1148,7 +1148,173 @@ footer {
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-/* line 172, sass/_chapter1.sass */
+/* line 170, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .labor_force h3 {
+  color: #666666;
+  float: left;
+  font-family: "Proxima N W01 Smbd";
+  font-size: 20px;
+  line-height: 1.3;
+  margin: 0;
+  text-align: center;
+  text-transform: uppercase; }
+  /* line 180, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force h3.first {
+    width: 370px; }
+  /* line 183, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force h3.second {
+    width: 305px;
+    margin-left: 120px; }
+/* line 187, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .labor_force .labor_force-chart {
+  background: url('../img/1/labor_force-chart.gif?1369945855') left top no-repeat;
+  margin: 6.25em 0 0 -42px;
+  width: 882px;
+  height: 347px;
+  position: relative; }
+  /* line 194, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point {
+    position: absolute;
+    display: block; }
+  /* line 198, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.line {
+    background-position: left top;
+    background-repeat: no-repeat;
+    width: 0;
+    height: 50px;
+    left: 65px;
+    -webkit-transition: width 0.3s;
+    -moz-transition: width 0.3s;
+    -o-transition: width 0.3s;
+    transition: width 0.3s; }
+    /* line 206, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.line.active {
+      width: 341px; }
+    /* line 209, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.line#labor_force-chart-data_point-1 {
+      background-image: url('../img/1/labor_force-chart-line-1.png?1369946313');
+      top: 56px;
+      -webkit-transition-delay: 0.2s;
+      -moz-transition-delay: 0.2s;
+      -o-transition-delay: 0.2s;
+      transition-delay: 0.2s; }
+    /* line 214, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.line#labor_force-chart-data_point-2 {
+      background-image: url('../img/1/labor_force-chart-line-2.png?1369946456');
+      top: 185px;
+      -webkit-transition-delay: 0.3s;
+      -moz-transition-delay: 0.3s;
+      -o-transition-delay: 0.3s;
+      transition-delay: 0.3s; }
+    /* line 219, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.line#labor_force-chart-data_point-3 {
+      background-image: url('../img/1/labor_force-chart-line-3.png?1369946499');
+      top: 230px;
+      -webkit-transition-delay: 0.4s;
+      -moz-transition-delay: 0.4s;
+      -o-transition-delay: 0.4s;
+      transition-delay: 0.4s; }
+    /* line 224, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.line#labor_force-chart-data_point-4 {
+      background-image: url('../img/1/labor_force-chart-line-4.png?1369946540');
+      top: 272px;
+      -webkit-transition-delay: 0.5s;
+      -moz-transition-delay: 0.5s;
+      -o-transition-delay: 0.5s;
+      transition-delay: 0.5s; }
+  /* line 229, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart .data_point.bar {
+    background: rgba(0, 0, 0, 0.8);
+    bottom: 35px;
+    width: 40px;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    -o-transition: height 0.3s;
+    transition: height 0.3s; }
+  /* line 237, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-5 {
+    left: 555px;
+    -webkit-transition-delay: 0.6s;
+    -moz-transition-delay: 0.6s;
+    -o-transition-delay: 0.6s;
+    transition-delay: 0.6s; }
+    /* line 241, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-5.active {
+      height: 58px; }
+  /* line 244, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-6 {
+    left: 627px;
+    -webkit-transition-delay: 0.7s;
+    -moz-transition-delay: 0.7s;
+    -o-transition-delay: 0.7s;
+    transition-delay: 0.7s; }
+    /* line 248, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-6.active {
+      height: 145px; }
+  /* line 251, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-7 {
+    left: 701px;
+    -webkit-transition-delay: 0.8s;
+    -moz-transition-delay: 0.8s;
+    -o-transition-delay: 0.8s;
+    transition-delay: 0.8s; }
+    /* line 255, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-7.active {
+      height: 182px; }
+  /* line 258, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-8 {
+    background: #548e85;
+    left: 774px;
+    -webkit-transition-delay: 0.9s;
+    -moz-transition-delay: 0.9s;
+    -o-transition-delay: 0.9s;
+    transition-delay: 0.9s; }
+    /* line 263, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-8.active {
+      height: 226px; }
+  /* line 266, sass/_chapter1.sass */
+  .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-9 {
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 2px;
+    color: white;
+    display: inline-block;
+    font-family: "BodoniW01-PosterItalic";
+    font-size: 24px;
+    padding: 0.5em 0.75em;
+    text-align: center;
+    margin-top: 10px;
+    opacity: 0;
+    overflow: inherit;
+    position: absolute;
+    left: 750px;
+    top: 20px;
+    -webkit-transition: opacity 0.3s, margin 0.3s;
+    -moz-transition: opacity 0.3s, margin 0.3s;
+    -o-transition: opacity 0.3s, margin 0.3s;
+    transition: opacity 0.3s, margin 0.3s;
+    -webkit-transition-delay: 1s;
+    -moz-transition-delay: 1s;
+    -o-transition-delay: 1s;
+    transition-delay: 1s; }
+    /* line 19, sass/_mixins.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-9:after {
+      bottom: 0;
+      margin-left: -4px;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      border-top: 4px solid rgba(0, 0, 0, 0.8);
+      margin-bottom: -4px; }
+    /* line 285, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-9 span {
+      font-family: "Bodoni W01 Poster";
+      letter-spacing: 2px; }
+    /* line 289, sass/_chapter1.sass */
+    .chapter-1-rethinking-retirement article .labor_force .labor_force-chart #labor_force-chart-data_point-9.active {
+      margin-top: 0;
+      opacity: 1; }
+/* line 293, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .outro .second {
   font-family: "Adobe Caslon W01 Bd";
   font-size: 20.8px; }
